- guava was still used, now all guava references are removed